# conformal-inference

./: .gitignore  pyproject.toml
.github/workflows/: lint.yaml
.github/workflows/matchers/: black.json  mypy.json  ruff.json
conformal_inference/: __init__.py
conformal_inference/metrics/: classification.py  regression.py
conformal_inference/models/: __init__.py  base.py  ensemble.py  inductive.py  sklearn.py  utils.py
conformal_inference/models/automl/: __init__.py  autogluon.py
conformal_inference/models/sklearn/: __init__.py  base.py  forest.py
