[tool.poetry]
name = "conformal-inference"
version = "0.1.2"
description = ""
authors = ["Sebastian Jäger <git@sebastian-jaeger.me>"]

[tool.poetry.dependencies]
python = "^3.8, <3.10"
scikit-learn = "^1.0.2"
numpy = "^1.22.2"
quantile-forest = "^1.0.1"
autogluon = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
