[tool.poetry]
name = "conformal-inference"
version = "0.1.6"
description = ""
authors = ["Sebastian Jäger <git@sebastian-jaeger.me>"]

[tool.poetry.dependencies]
python = "^3.9, <3.10"
quantile-forest = { version = "^1.0.1", optional = true }
autogluon = { version = "^0.8.2", extras = ["all"] }


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
ruff = "^0.0.277"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

select = ["ALL"]
ignore = ["D100", "D104"]

[tool.ruff.pydocstyle]
convention = "google"
